--- a/README
+++ b/README
@@ -3,21 +3,21 @@ freealut
 freealut is a free implementation of OpenAL's ALUT standard.
 
 Runtime requirements:
-  cygwin-1.5.20-1
+  cygwin-1.5.24-2
   libopenal0-0.0.8-1
 
 Build requirements:
 (besides corresponding devel packages)
-  cygwin-1.5.20-1
-  autoconf2.5-2.59-2
+  cygwin-1.5.24-2
+  autoconf2.5-2.61-1
   automake1.9-1.9.6-1
-  binutils-20050610-1
-  cygport-0.1.93-1
-  gawk-3.1.5-2
-  gcc-core-3.4.4-1
-  libtool1.5-1.5.22-1
-  make-3.80-1
-  sed-4.1.4-1
+  binutils-20060817-1
+  cygport-0.2.11-1
+  gawk-3.1.5-4
+  gcc-core-3.4.4-3
+  libtool1.5-1.5.23a-2
+  make-3.81-1
+  sed-4.1.5-2
 
 Canonical website:
   http://www.openal.org/
@@ -28,16 +28,16 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack freealut-1.0.1-X-src.tar.bz2
+  unpack freealut-1.1.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./freealut-1.0.1-X.cygport all
+  cygport ./freealut-1.1.0-X.cygport all
 
 This will create:
-  /usr/src/freealut-1.0.1-X-src.tar.bz2
-  /usr/src/freealut-1.0.1-X.tar.bz2
-  /usr/src/libalut0-1.0.1-X.tar.bz2
+  /usr/src/freealut-1.1.0-X-src.tar.bz2
+  /usr/src/freealut-1.1.0-X.tar.bz2
+  /usr/src/libalut0-1.1.0-X.tar.bz2
 
 -------------------------------------------
 
@@ -49,15 +49,15 @@ Files included in the main package:
   /usr/lib/libalut.dll.a
   /usr/lib/libalut.la
   /usr/lib/pkgconfig/freealut.pc
-  /usr/share/doc/Cygwin/freealut-1.0.1.README
-  /usr/share/doc/freealut-1.0.1/AUTHORS
-  /usr/share/doc/freealut-1.0.1/COPYING
-  /usr/share/doc/freealut-1.0.1/ChangeLog
-  /usr/share/doc/freealut-1.0.1/INSTALL
-  /usr/share/doc/freealut-1.0.1/NEWS
-  /usr/share/doc/freealut-1.0.1/README
-  /usr/share/doc/freealut-1.0.1/html/alut.css
-  /usr/share/doc/freealut-1.0.1/html/alut.html
+  /usr/share/doc/Cygwin/freealut-1.1.0.README
+  /usr/share/doc/freealut-1.1.0/AUTHORS
+  /usr/share/doc/freealut-1.1.0/COPYING
+  /usr/share/doc/freealut-1.1.0/ChangeLog
+  /usr/share/doc/freealut-1.1.0/INSTALL
+  /usr/share/doc/freealut-1.1.0/NEWS
+  /usr/share/doc/freealut-1.1.0/README
+  /usr/share/doc/freealut-1.1.0/html/alut.css
+  /usr/share/doc/freealut-1.1.0/html/alut.html
 
 Files included in the runtime library package:
 
@@ -66,6 +66,9 @@ Files included in the runtime library package:
 ------------------
 
 Port Notes:
+
+----- version 1.1.0-1 -----
+Version bump.
 
 ----- version 1.0.1-2 -----
 Corrected name of runtime library package.
